[tool.poetry]
name = "selfeducation"
version = "0.1.0"
description = ""
authors = ["Mikhail Panin"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.4.0"
asyncio = "^3.4.3"
aiohttp = "^3.8.5"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
